# whoa

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  typescript
src/: main.rs
src/anim/: collapse.rs  conway.rs  cos.rs  maelstrom.rs  mod.rs  perlin.rs  slime.rs  spiral.rs
src/anim/saturn/: mod.rs  romparse.rs
