[package]
name = "whoa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
cellophane = "0.1.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.2"
dirs = "6.0.0"
env_logger = "0.11.9"
glam = "0.32.1"
indoc = "2.0.7"
log = "0.4.29"
noise = "0.9.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
syntect = "5.3.0"
toml = "1.1.2"
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
vte = { version = "0.15.0", features = ["ansi"] }
