[package]
name = "whoa"
version = "0.1.1"
edition = "2024"
description = "A terminal screensaver with multiple visual effects"
license = "MIT"
repository = "https://github.com/km-clay/whoa"
readme = "README.md"
keywords = ["terminal", "screensaver", "animation", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
cellophane = "0.2.0"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11.9"
glam = "0.32.1"
indoc = "2.0.7"
log = "0.4.29"
noise = "0.9.0"
rand = "0.8.0"
syntect = "5.3.0"
toml = "1.1.2"
